--- a/src/assets/lib/flaticon/font/flaticon.css
+++ b/src/assets/lib/flaticon/font/flaticon.css
@@ -1,11 +1,10 @@
 @font-face {
   font-family: "Flaticon";
-  src: url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.eot");
-  src: url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.eot?#iefix") format("embedded-opentype"),
-       url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.woff2") format("woff2"),
-       url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.woff") format("woff"),
-       url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.ttf") format("truetype"),
-       url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+
+   src: url("../font/Flaticon.woff2") format("woff2"),
+       url("../font/Flaticon.woff") format("woff"),
+       url("../font/Flaticon.ttf") format("truetype"),
+       url("../font/Flaticon.svg#Flaticon") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -13,7 +12,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: "Flaticon";
-    src: url("http://localhost:4200/src/assets/lib/flaticon/font/Flaticon.svg#Flaticon") format("svg");
+    src: url("../font/Flaticon.svg#Flaticon") format("svg");
   }
 }
 
