--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
             <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0"
                 style="font-size: 40px; line-height: 40px">
                 <i class="flaticon-043-teddy-bear"></i>
-                <span class="text-white">KidKinder</span>
+                <span class="text-white">KidCoder</span>
             </a>
             <p>
                 Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea
@@ -57,7 +57,8 @@
                 <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
                 <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Teachers</a>
                 <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
-                <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                <a class="text-white" routerLink="login"><i class="fa fa-angle-right mr-2"></i>Admin</a>
             </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
