--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,9 +20,10 @@
                         <a routerLink="admin/teachers" class="dropdown-item">Teachers</a>
                         <a routerLink="admin/courses" class="dropdown-item">Courses</a>
                         <a routerLink="admin/gallery" class="dropdown-item">Gallery</a>
+                        <a (click)="logout()" class="dropdown-item">Logout</a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link" routerLink="contact">Contact</a>
+                <a class="nav-item nav-link" routerLink="contact">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-4">Join Class</a>
         </div>
