--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,19 +3,20 @@
     <div class="card border-0">
         <div class="card-header bg-secondary text-center p-4">
             <h1 class="text-white m-0">Admin Login</h1>
+            <h6 style="color:red;">{{ message }}</h6>
         </div>
         <div class="card-body rounded-bottom bg-primary p-5">
-            <form>
+            <form [formGroup]="formdata" (ngSubmit) = "submit(formdata.value)">
                 <div class="form-group">
-                    <input type="text" class="form-control border-0 p-4" placeholder="Username"
-                        required="required" />
+                    <input type="text" class="form-control border-0 p-4" placeholder="Username" name="username" formControlName="username" />
+                    <span *ngIf="!formdata.controls.username.valid && formdata.controls.username.touched" class="text-danger">Please enter username.</span>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control border-0 p-4" placeholder="Password"
-                        required="required" />
+                    <input type="password" class="form-control border-0 p-4" placeholder="Password" name="password" formControlName="password" />
+                    <span *ngIf="!formdata.controls.password.valid && formdata.controls.password.touched" class="text-danger">Please enter password.</span>
                 </div>
                 <div>
-                    <button class="btn btn-secondary btn-block border-0 py-3" type="submit">
+                    <button [disabled]="!formdata.valid" class="btn btn-secondary btn-block border-0 py-3" type="submit">
                         LOGIN
                     </button>
                 </div>
