--- a/src/app/teachers/teachers.component.html
+++ b/src/app/teachers/teachers.component.html
@@ -49,33 +49,13 @@
             <p class="section-title px-5"><span class="px-2">Testimonial</span></p>
             <h1 class="mb-4">What Parents Say!</h1>
         </div>
-        <div class="owl-carousel testimonial-carousel">
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle" src="../../assets/img/testimonial-1.jpg" style="width: 70px; height: 70px;" alt="Image">
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonial-item px-3">
-                <div class="bg-light shadow-sm rounded mb-4 p-4">
-                    <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                    Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
-                </div>
-                <div class="d-flex align-items-center">
-                    <img class="rounded-circle" src="../../assets/img/testimonial-2.jpg" style="width: 70px; height: 70px;" alt="Image">
-                    <div class="pl-3">
-                        <h5>Parent Name</h5>
-                        <i>Profession</i>
-                    </div>
-                </div>
-            </div>
+        <owl-carousel-o [options]="customOptions">
+            <ng-template carouselSlide>Slide 1</ng-template>
+            <ng-template carouselSlide>Slide 2</ng-template>
+            <ng-template carouselSlide>Slide 3</ng-template>
+        </owl-carousel-o>
+    </div>
+</div>            </div>
             <div class="testimonial-item px-3">
                 <div class="bg-light shadow-sm rounded mb-4 p-4">
                     <h3 class="fas fa-quote-left text-primary mr-3"></h3>
