--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,21 +31,23 @@
                 <h4 class="fa fa-map-marker-alt text-primary"></h4>
                 <div class="pl-3">
                     <h5 class="text-white">Address</h5>
-                    <p>123 Street, New York, USA</p>
+                    <p>Shree Apartment, 2nd Floor, 4th Ln, near C'Lai World, Rajarampuri, Kolhapur, Maharashtra 416008.</p>
                 </div>
             </div>
             <div class="d-flex">
                 <h4 class="fa fa-envelope text-primary"></h4>
                 <div class="pl-3">
                     <h5 class="text-white">Email</h5>
-                    <p>info@example.com</p>
+                    <p>info@igapeducation.com</p>
                 </div>
             </div>
             <div class="d-flex">
                 <h4 class="fa fa-phone-alt text-primary"></h4>
                 <div class="pl-3">
                     <h5 class="text-white">Phone</h5>
-                    <p>+012 345 67890</p>
+                    <p> +91 9561320192 </p>   
+                    <p> +91 9552610806 </p>          
+                    <p> +91 7776852121 </p>
                 </div>
             </div>
         </div>
