--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,7 +20,7 @@
                         <a routerLink="admin/teachers" class="dropdown-item">Teachers</a>
                         <a routerLink="admin/courses" class="dropdown-item">Courses</a>
                         <a routerLink="admin/gallery" class="dropdown-item">Gallery</a>
-                        <a (click)="logout()" class="dropdown-item">Logout</a>
+                        <a (click)="logout()" class="dropdown-item text-danger">Logout</a>
                     </div>
                 </div>
                 <a class="nav-item nav-link" routerLink="contact">Contact</a>
