--- a/src/app/admin/course/course.component.html
+++ b/src/app/admin/course/course.component.html
@@ -3,23 +3,21 @@
         <div class="checkout-box">
             <div class="row">
                 <div class="col-lg-12">
-                    <h2>Add Teacher</h2>
+                    <h2>Add Courses</h2>
                     <form class="register-form" role="form" [formGroup]="formdata" (ngSubmit)="onClickSumbit(formdata.value)">
                         <input type="hidden" class="form-control" formControlName="id" >
                         <input type="hidden" class="form-control" formControlName="photo">
                         <div class="font-weight-bold form-group">                        
-                        <label>Name</label>
+                        <label>Course Name</label>
                         <input type="text" class="form-control" formControlName="name"><br>
-                        <label>Profession</label>
-                        <input type="text" class="form-control" formControlName="profession"><br>
+                        <label>Description</label>
+                        <input type="text" class="form-control" formControlName="description"><br>
                         <label>Photo</label>
                         <input type="file" class="form-control" (change)="filechanged($event)" accept="image/*"><br>
-                        <label>Twitterlink</label>
-                        <input type="text" class="form-control" formControlName="twitterlink"><br>
-                        <label>Facebooklink</label>
-                        <input type="text" class="form-control" formControlName="facebooklink"><br>
-                        <label>LinkedInlink</label>
-                        <input type="text" class="form-control" formControlName="LinkedInlink"><br>
+                        <label>Timing</label>
+                        <input type="text" class="form-control" formControlName="timing"><br>
+                        <label>Fees</label>
+                        <input type="text" class="form-control" formControlName="fees"><br>
                         <input type="submit" value="Save" class="btn btn-success btn-lg">
                        </div>
                     </form>
