--- a/src/app/admin/teachers/teachers.component.html
+++ b/src/app/admin/teachers/teachers.component.html
@@ -1,3 +1,27 @@
-<div class="container mt-4">
-<a routerLink="../teacher" class="btn btn-success">Add Teacher</a>
+<div class="container mt-5">
+    <h2>Teachers ({{ teachers.length }})</h2>
+    <a routerLink="../teacher/0" class="btn btn-success pull-right float-right">Add Teacher</a>
+    <br><br>
+    <div class="row">
+        <div class="col-lg-12 table-responsive">
+            <table class="table table-bordered">
+                <tr>
+                    <th>Actions</th>
+                    <th>No</th>
+                    <th>Image</th>
+                    <th>Name</th>                    
+                </tr>
+                <tr *ngFor="let teacher of teachers;let i = index;">
+                    <td>
+                        <button routerLink="../teacher/{{ teacher._id }}" class="btn btn-primary"><i class="fa fa-edit"></i></button> &nbsp;
+                        <button  class="btn btn-danger" (click)="deleteTeacher(teacher._id)"><i class="fa fa-trash"></i></button>
+                    </td>
+                    <td>{{ i + 1}}</td>
+                    <td><img src="{{ baseurl + teacher.photo }}" style="height:80px;" /></td>
+                    <td>{{ teacher.name }}</td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
+<br>
