--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -52,29 +52,31 @@
                     <i class="fa fa-map-marker-alt d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Address</h5>
-                        <p>123 Street, New York, USA</p>
+                        <p>Shree Apartment, 2nd Floor, 4th Ln, near C'Lai World, Rajarampuri, Kolhapur, Maharashtra 416008.</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <i class="fa fa-envelope d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Email</h5>
-                        <p>info@example.com</p>
+                        <p>info@igapeducation.com</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <i class="fa fa-phone-alt d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Phone</h5>
-                        <p>+012 345 67890</p>
+                        <p> +91 9561320192 </p>   
+                        <p> +91 9552610806 </p>          
+                        <p> +91 7776852121 </p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <i class="far fa-clock d-inline-flex align-items-center justify-content-center bg-primary text-secondary rounded-circle" style="width: 45px; height: 45px;"></i>
                     <div class="pl-3">
                         <h5>Opening Hours</h5>
-                        <strong>Sunday - Friday:</strong>
-                        <p class="m-0">08:00 AM - 05:00 PM </p>
+                        <strong>Monday - Saturday:</strong>
+                        <p class="m-0">08:00 AM - 08:00 PM </p>
                     </div>
                 </div>
             </div>
