--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -20,21 +20,21 @@
             <h1 class="mb-4">Classes for Your Kids</h1>
         </div>
         <div class="row">
-            <div class="col-lg-4 mb-5">
+            <div class="col-lg-4 mb-5" *ngFor="let class of classes;">
                 <div class="card border-0 bg-light shadow-sm pb-2">
-                    <img class="card-img-top mb-2" src="{{ baseurl + classes.photo }}" alt="{{classes.name}}">
+                    <img class="card-img-top mb-2" src="{{ baseurl + class.photo }}" alt="{{classes.name}}">
                     <div class="card-body text-center">
-                        <h4 class="card-title">{{classes.name}}</h4>
-                        <p class="card-text">{{classes.description}}</p>
+                        <h4 class="card-title">{{class.name}}</h4>
+                        <p class="card-text">{{class.description}}</p>
                     </div>
                     <div class="card-footer bg-transparent py-4 px-5">
                         <div class="row border-bottom">
                             <div class="col-6 py-1 text-right border-right"><strong>Class Time</strong></div>
-                            <div class="col-6 py-1">{{classes.timing}}</div>
+                            <div class="col-6 py-1">{{class.timing}}</div>
                         </div>
                         <div class="row">
                             <div class="col-6 py-1 text-right border-right"><strong>Tution Fee</strong></div>
-                            <div class="col-6 py-1">{{classes.fees}}</div>
+                            <div class="col-6 py-1">{{class.fees}}</div>
                         </div>
                     </div>
                     <a href="" class="btn btn-primary px-4 mx-auto mb-4">Join Now</a>
