--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                     <div class="dropdown-menu rounded-0 m-0">
                         <a routerLink="admin/teachers" class="dropdown-item">Teachers</a>
                         <a routerLink="admin/courses" class="dropdown-item">Courses</a>
-                        <a routerLink="admin/gallery" class="dropdown-item">Gallery</a>
+                        <a routerLink="admin/galleries" class="dropdown-item">Gallery</a>
                         <a (click)="logout()" class="dropdown-item text-danger">Logout</a>
                     </div>
                 </div>
