--- a/src/app/admin/galleries/galleries.component.html
+++ b/src/app/admin/galleries/galleries.component.html
@@ -17,7 +17,9 @@
                         <button  class="btn btn-danger" (click)="deletegallery(gallery._id)"><i class="fa fa-trash"></i></button>
                     </td>
                     <td>{{ i + 1}}</td>
-                    <td><img src="{{ baseurl + gallery.photo }}" style="height:80px;" /></td>
+                    <td>
+                            <img src="{{ baseurl + gallery.photo }}" onerror="this.src = 'https://cdn-icons-png.flaticon.com/512/1053/1053244.png'" style="height:80px;" >
+                    </td>
                     <td>{{ gallery.name }}</td>
                 </tr>
             </table>
