--- a/src/app/admin/course/course.component.html
+++ b/src/app/admin/course/course.component.html
@@ -4,22 +4,34 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Add Courses</h2>
-                    <form class="register-form" role="form" [formGroup]="formdata" (ngSubmit)="onClickSumbit(formdata.value)">
-                        <input type="hidden" class="form-control" formControlName="id" >
+                    <form class="register-form" role="form" [formGroup]="formdata"
+                        (ngSubmit)="onClickSumbit(formdata.value)">
+                        <input type="hidden" class="form-control" formControlName="id">
                         <input type="hidden" class="form-control" formControlName="photo">
-                        <div class="font-weight-bold form-group">                        
-                        <label>Course Name</label>
-                        <input type="text" class="form-control" formControlName="name"><br>
-                        <label>Description</label>
-                        <input type="text" class="form-control" formControlName="description"><br>
-                        <label>Photo</label>
-                        <input type="file" class="form-control" (change)="filechanged($event)" accept="image/*"><br>
-                        <label>Timing</label>
-                        <input type="text" class="form-control" formControlName="timing"><br>
-                        <label>Fees</label>
-                        <input type="text" class="form-control" formControlName="fees"><br>
-                        <input type="submit" value="Save" class="btn btn-success btn-lg">
-                       </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Course Name</label>
+                            <input type="text" class="form-control" formControlName="name">
+                            <span *ngIf="!formdata.controls.name.valid && formdata.controls.name.touched"
+                                class="text-danger">Please enter Course name.</span><br>
+                            <label class="font-weight-bold">Description</label>
+                            <input type="text" class="form-control" formControlName="description">
+                            <span *ngIf="!formdata.controls.description.valid && formdata.controls.description.touched"
+                                class="text-danger">Please enter Description.</span><br>
+                            <label class="font-weight-bold">Photo</label>
+                            <input type="file" class="form-control" (change)="filechanged($event)" accept="image/*">
+                            <span *ngIf="!formdata.controls.photo.valid && formdata.controls.photo.touched"
+                                class="text-danger">Please select Photo.</span><br>
+                            <label class="font-weight-bold">Timing</label>
+                            <input type="text" class="form-control" formControlName="timing">
+                            <span *ngIf="!formdata.controls.timing.valid && formdata.controls.timing.touched"
+                                class="text-danger">Please enter Timing.</span><br>
+                            <label class="font-weight-bold">Fees</label>
+                            <input type="text" class="form-control" formControlName="fees">
+                            <span *ngIf="!formdata.controls.fees.valid && formdata.controls.fees.touched"
+                                class="text-danger">Please enter Fees.</span><br>
+                                <input [disabled]="!formdata.valid" type="submit" value="Save"
+                                class="btn btn-success btn-lg">
+                        </div>
                     </form>
                 </div>
             </div>
