--- a/src/app/admin/gallery/gallery.component.html
+++ b/src/app/admin/gallery/gallery.component.html
@@ -4,16 +4,21 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2>Add Gallery</h2>
-                    <form class="register-form" role="form" [formGroup]="formdata" (ngSubmit)="onClickSumbit(formdata.value)">
-                        <input type="hidden" class="form-control" formControlName="id" >
+                    <form class="register-form" role="form" [formGroup]="formdata"
+                        (ngSubmit)="onClickSumbit(formdata.value)">
+                        <input type="hidden" class="form-control" formControlName="id">
                         <input type="hidden" class="form-control" formControlName="photo">
-                        <div class="font-weight-bold form-group">                        
-                        <label>Name</label>
-                        <input type="text" class="form-control" formControlName="name"><br>
-                        <label>Photo</label>
-                        <input type="file" class="form-control" (change)="filechanged($event)" accept="image/*"><br>
-                        <input type="submit" value="Save" class="btn btn-success btn-lg">
-                       </div>
+                        <div class="form-group">
+                            <label class="font-weight-bold">Name</label>
+                            <input type="text" class="form-control" formControlName="name">
+                            <span *ngIf="!formdata.controls.name.valid && formdata.controls.name.touched"
+                                class="text-danger">Please enter Name.</span><br>
+                            <label class="font-weight-bold">Photo</label>
+                            <input type="file" class="form-control" (change)="filechanged($event)" accept="image/*">
+                            <span class="text-danger">{{ message }}</span><br>
+                            <input [disabled]="!formdata.valid" type="submit" value="Save"
+                                class="btn btn-success btn-lg">
+                        </div>
                     </form>
                 </div>
             </div>
