--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,11 +9,11 @@
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
             <div class="navbar-nav font-weight-bold mx-auto py-0">
-                <a class="nav-item nav-link active" routerLink="">Home</a>
-                <a class="nav-item nav-link" routerLink="about">About</a>
-                <a class="nav-item nav-link" routerLink="classes">Classes</a>
-                <a class="nav-item nav-link" routerLink="teachers">Teachers</a>
-                <a class="nav-item nav-link" routerLink="gallery">Gallery</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="/home">Home</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="about">About</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="classes">Classes</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="teachers">Teachers</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="gallery">Gallery</a>
                 <div class="nav-item dropdown" *ngIf="isadmin">
                     <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Administrator</a>
                     <div class="dropdown-menu rounded-0 m-0">
@@ -23,7 +23,7 @@
                         <a (click)="logout()" class="dropdown-item text-danger">Logout</a>
                     </div>
                 </div>
-                <a class="nav-item nav-link" routerLink="contact">Contact</a>
+                <a class="nav-item nav-link" routerLinkActive="active" routerLink="contact">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-4">Join Class</a>
         </div>
