--- a/src/app/admin/teachers/teachers.component.html
+++ b/src/app/admin/teachers/teachers.component.html
@@ -11,7 +11,12 @@
                     <th>Image</th>
                     <th>Name</th>                    
                 </tr>
-                <tr *ngFor="let teacher of teachers;let i = index;">
+                <tr *ngFor="let teacher of teachers| paginate
+                : {
+                    itemsPerPage: itemsPerPage,
+                    currentPage: page,
+                    totalItems: totalItems
+                  };let i = index;">
                     <td>
                         <button routerLink="../teacher/{{ teacher._id }}" class="btn btn-primary"><i class="fa fa-edit"></i></button> &nbsp;
                         <button  class="btn btn-danger" (click)="deleteTeacher(teacher._id)"><i class="fa fa-trash"></i></button>
@@ -25,3 +30,9 @@
     </div>
 </div>
 <br>
+
+<pagination-controls
+  class="pagination justify-content-center"
+  (pageChange)="page = $event"
+></pagination-controls>
+
