--- a/src/app/admin/courses/courses.component.html
+++ b/src/app/admin/courses/courses.component.html
@@ -21,7 +21,7 @@
                         <button routerLink="../course/{{ course._id }}" class="btn btn-primary"><i class="fa fa-edit"></i></button> &nbsp;
                         <button  class="btn btn-danger" (click)="deleteCourse(course._id)"><i class="fa fa-trash"></i></button>
                     </td>
-                    <td>{{i + 1}}</td>
+                    <td>{{course.srno}}</td>
                     <td> <img src="{{ baseurl + course.photo }}" onerror="this.src = 'https://cdn-icons-png.flaticon.com/512/1053/1053244.png'" style="height:80px;" ></td>
                     <td>{{ course.name }}</td>
                 </tr>
