--- a/src/app/admin/galleries/galleries.component.html
+++ b/src/app/admin/galleries/galleries.component.html
@@ -21,7 +21,7 @@
                         <button routerLink="../gallery/{{ gallery._id }}" class="btn btn-primary"><i class="fa fa-edit"></i></button> &nbsp;
                         <button  class="btn btn-danger" (click)="deletegallery(gallery._id)"><i class="fa fa-trash"></i></button>
                     </td>
-                    <td>{{i + 1}}</td>
+                    <td>{{gallery.srno}}</td>
                     <td>
                             <img src="{{ baseurl + gallery.photo }}" onerror="this.src = 'https://cdn-icons-png.flaticon.com/512/1053/1053244.png'" style="height:80px;" >
                     </td>
