--- a/src/app/admin/teachers/teachers.component.html
+++ b/src/app/admin/teachers/teachers.component.html
@@ -21,7 +21,7 @@
                         <button routerLink="../teacher/{{ teacher._id }}" class="btn btn-primary"><i class="fa fa-edit"></i></button> &nbsp;
                         <button  class="btn btn-danger" (click)="deleteTeacher(teacher._id)"><i class="fa fa-trash"></i></button>
                     </td>
-                    <td>{{ i + 1}}</td>
+                    <td>{{teacher.srno}}</td>
                     <td><img src="{{ baseurl + teacher.photo }}" onerror="this.src = 'https://cdn-icons-png.flaticon.com/512/1053/1053244.png'" style="height:80px;" ></td>
                     <td>{{ teacher.name }}</td>
                 </tr>
