--- a/src/app/classes/classes.component.html
+++ b/src/app/classes/classes.component.html
@@ -20,7 +20,12 @@
             <h1 class="mb-4">Classes for Your Kids</h1>
         </div>
         <div class="row">
-            <div class="col-lg-4 mb-5" *ngFor="let class of classes;">
+            <div class="col-lg-4 mb-5" *ngFor="let class of classes| paginate
+            : {
+                itemsPerPage: itemsPerPage,
+                currentPage: page,
+                totalItems: totalItems
+              };">
                 <div class="card border-0 bg-light shadow-sm pb-2">
                     <img class="card-img-top mb-2" src="{{ baseurl + class.photo }}" alt="{{classes.name}}">
                     <div class="card-body text-center">
@@ -44,7 +49,10 @@
     </div>
 </div>
 <!-- Class End -->
-
+<pagination-controls
+  class="pagination justify-content-center"
+  (pageChange)="page = $event"
+></pagination-controls>
 
 <!-- Registration Start -->
 <div class="container-fluid py-5">
