--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,17 @@
+<ngx-spinner *ngIf="loader.isloading | async" bdColor="rgba(51,51,51,0.8)" size="medium" color="#fff"
+  >
+  <!-- type="ball-scale-multiple" -->
+  <div class="la-ball-atom la-dark la-3x">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <br>
+  <p style="font-size: 20px; color: white">&nbsp; Loading...</p>
+</ngx-spinner>
+
+
 <div class="container-fluid bg-light position-relative shadow">
     <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
         <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px">
